# Trading-bot-_projects-

./: README.md
.github/workflows/: maximilion-auto-trade-lab-ci.yml
forex-pairs/: README.md  jimi_forex_one_cell_executor.py
gold-1-7-2026/: README.md  jimi_gold_one_cell_executor.py
maximilion-auto-trade-lab/: .env.example  README.md  pyproject.toml
maximilion-auto-trade-lab/src/maximilion_auto_trade_lab/: __init__.py  cli.py  config.py  constants.py  schemas.py
maximilion-auto-trade-lab/src/maximilion_auto_trade_lab/risk/: __init__.py  risk_engine.py  rules.py
maximilion-auto-trade-lab/tests/: test_config.py  test_risk_engine.py  test_symbol_routing.py
